Finished intro to Python lesson. It can now be copied via repository and worked on.

--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -17,12 +17,12 @@
     "\n",
     "## Simple Data Types\n",
     "\n",
-    "The basic python data types most commonly used are strings, integers, and floats. There are much more (such as sets, complex, ...etc) but they are not necessary right now. "
+    "The basic python data types most commonly used are strings, integers, and floats. There are much more (such as sets, complex, ...etc) but the majority of your programming will concern these basic types. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "ccce1fad",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,12 @@
    "id": "51086519",
    "metadata": {},
    "source": [
-    "Variables do not need \"types\" when declared. Variables point to a range of different values from integers to functions to objects. To display a variable, the built in \"print\" function is used."
+    "Variables do not need \"types\" when declared. Variables point to a range of different values from integers to functions to objects. To display a variable to the console, the built in \"print\" function is used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "df90b3c8",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
     "\n",
     "# print the type of the variable\n",
     "\n",
-    "# imbed variable into text"
+    "# imbed variable into text\n"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "id": "4b0922b5",
    "metadata": {},
    "source": [
-    "Simple operations can be performed with each of these data types"
+    "Simple operations can be performed with each of these data types."
    ]
   },
   {
@@ -89,12 +89,12 @@
     "\n",
     "### Lists\n",
     "\n",
-    "A list is ordered so index matters. It an iterable data structure and can be indexed. Python uses zero indexing. List can store all data types including functions."
+    "A list is ordered so index matters. It is an iterable data structure and can be indexed. Python uses zero indexing. Lists can store an array of data types including another list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "cb98c8c7",
    "metadata": {},
    "outputs": [],
@@ -118,10 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "126440dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 5, 4, 3]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# define list\n",
     "\n",
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "b11943fa",
    "metadata": {},
    "outputs": [],
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "09b4f030",
    "metadata": {},
    "outputs": [],
@@ -177,7 +188,129 @@
     "\n",
     "# pop value that does not exist\n",
     "\n",
-    "# return copy of dictionary"
+    "# return copy of dictionary\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4544caf2",
+   "metadata": {},
+   "source": [
+    "### Tuples\n",
+    "\n",
+    "Tuples behave like a list in terms of use/operation. The difference is they are immutable and cannot be changed after assignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ebb7117e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a tuple\n",
+    "\n",
+    "\n",
+    "# try to assign new value to index\n",
+    "# try:\n",
+    "#     my_tuple[0] = 8\n",
+    "# except Exception as err:\n",
+    "#     print(err)\n",
+    "#     print(f\"Cannot mutate tuple. Tuple remains {my_tuple}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16c59084",
+   "metadata": {},
+   "source": [
+    "## Iterables\n",
+    "\n",
+    "Iterables are objects that can return individual members. They can be iterated through using a 'for' loop. One example of an iterable is a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e26283ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iterate through list and print out values\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46cffe64",
+   "metadata": {},
+   "source": [
+    "Python has many examples of iterables from generators to ranges. Some of the commonly used ones are demonstrated below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c83f49fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example of using range\n",
+    "\n",
+    "# example of dictionary iterable methods\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acc1b325",
+   "metadata": {},
+   "source": [
+    "## Importing modules\n",
+    "\n",
+    "Python is open source and along with that has support from lots of different creators. This allows for the creation of libraries that free to use and maintained by dedicated teams. The best library for linear algebra operations is Numpy. Modules can be imported and incorporated into code under an alias. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fb864fcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import numpy module using 'np' alias\n",
+    "\n",
+    "# create an instance of numpy object 'array'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d50dc512",
+   "metadata": {},
+   "source": [
+    "## Functions\n",
+    "\n",
+    "Python allows for easy creation of modular coding. This allows developers to split large blocks of single use code into smaller blocks that accomplish the same task and are re-usable. The following function will be implemented into python code using two methods:\n",
+    "\n",
+    "$f(x) = x^2 + 3$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c8c173d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create normal function\n",
+    "\n",
+    "# create a lambda function\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27b5a9bd",
+   "metadata": {},
+   "source": [
+    "Functions have lots of utility in Python. They can be nested, stored in data structures, incorporated in objects, and used in a wide variety of other applications. Building reusable functionality into code is the basis of object oriented programming."
    ]
   }
  ],
