Cleared output and added boolean example

--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "ccce1fad",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,9 @@
     "\n",
     "# example of an integer\n",
     "\n",
-    "# example of a float\n"
+    "# example of a float\n",
+    "\n",
+    "# example of a boolean\n"
    ]
   },
   {
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "df90b3c8",
    "metadata": {},
    "outputs": [],
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "cb98c8c7",
    "metadata": {},
    "outputs": [],
@@ -118,21 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "126440dc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 5, 4, 3]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define list\n",
     "\n",
@@ -157,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "b11943fa",
    "metadata": {},
    "outputs": [],
@@ -179,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "09b4f030",
    "metadata": {},
    "outputs": [],
@@ -203,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "ebb7117e",
    "metadata": {},
    "outputs": [],
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "e26283ee",
    "metadata": {},
    "outputs": [],
@@ -249,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "c83f49fb",
    "metadata": {},
    "outputs": [],
@@ -271,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "fb864fcc",
    "metadata": {},
    "outputs": [],
@@ -295,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "c8c173d4",
    "metadata": {},
    "outputs": [],
